<resources>
    <string name="app_name">天应助手N3</string>
    <string name="app_name_en">TianYingN3</string>
    <string name="device_name">天应盒子N3</string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!--log相关-->
    <string name="app_tag">TianYing_N3</string>
    <string name="btError_cant_init">无法初始化 BluetoothManager</string>
    <string name="btError_cant_get_adapter">无法获得 BluetoothAdapter</string>
    <string name="btError_init">BluetoothAdapter not initialized or unspecified address</string>
    <string name="no_bt_device_found">没发现蓝牙设备，无法连接</string>
    <string name="create_new_bt_connect">Trying to create a new connection</string>
    <string name="bt_connect_failed">蓝牙没有初始化，连接失败</string>
    <string name="bt_service_open_failed">蓝牙服务开启失败</string>

    <string name="ble_cant_use">本设备不支持BLE</string>
    <string name="ble_service_bind">BLE服务启动</string>
    <string name="ble_service_unbind">BLE服务关闭</string>
    <string name="ble_connect_start">开始连接蓝牙设备</string>

    <string name="data_analyse_error">数据解析异常</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--登录注册相关-->
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="enter_bd_num">请输入北斗卡号</string>
    <string name="enter_password">请输入密码</string>
    <string name="register_free">免费注册</string>
    <string name="get_password">忘记密码?</string>

    <!--主页相关-->
    <string name="home">首页</string>
    <string name="msg">消息</string>
    <string name="map">地图</string>
    <string name="me">我的</string>
    <string name="setting">设置</string>

    <!--蓝牙提示相关-->
    <string name="connected_to">已连接至:</string>
    <string name="connected_no">未连接设备</string>
    <string name="connectting">设备连接中……</string>
    <string name="connected_failed">设备连接失败</string>
    <string name="bt_onoff">蓝牙开关</string>
    <string name="bt_device_list">蓝牙设备</string>
    <string name="bt_device_search">搜索</string>
    <string name="bluetooth">蓝牙</string>

    <!--传感器相关-->
    <string name="no_sensor">手机不支持指南针功能</string>

    <!--北斗信息相关-->
    <string name="bd_card_num">北斗卡号:</string>
    <string name="no_bd_card_num">无卡号</string>
    <string name="bd_com_lv">通信等级:</string>
    <string name="sending">发送中</string>
    <string name="send_failed">发送失败</string>
    <string name="send_to_bd">发送至北斗</string>
    <string name="send_to_mobile">发送至手机</string>
    <string name="rcv_from_bd">来自北斗</string>
    <string name="rcv_from_mobile">来自手机</string>

    <!--附加信息相关-->
    <string name="device_power">设备电量:</string>
    <string name="running_time">运行时长:</string>

    <!--报文协议相关-->
    <string name="msg_code_start_index">0F</string>
    <string name="msg_code_pos_msg">01</string>
    <string name="msg_code_sms_msg">04</string>

    <!--报文相关-->
    <string name="send_msg">发送</string>
    <string name="pos_info">位置开关</string>
    <string name="pos_send_on">附带位置</string>
    <string name="pos_send_off">关闭位置</string>
    <string name="cant_send_msg">设备未正确连接，不可发送信息</string>
    <string name="no_msg">无消息</string>
    <string name="new_msg">新建消息</string>
    <string name="send_to_contact">收件人:</string>
    <string name="input_rcv_contact">在此输入接收方地址</string>
    <string name="send_to_device">将消息发送至设备</string>
    <string name="send_to_phone">将消息发送至手机</string>
    <string name="pos_info_text">[位置信息]</string>

    <!--对话框相关-->
    <string name="confirm">确定</string>
    <string name="esc">取消</string>
    <string name="donot_connect_bd">确认不连接北斗设备？</string>
    <string name="exit_confirm">是否退出?</string>
    <string name="save">保存</string>

    <!--联系人相关-->
    <string name="this_device">#本机#</string>
    <string name="phone_num">手机号:</string>
    <string name="remark_info">备注信息:</string>
    <string name="name_cant_null">姓名不可为空</string>
    <string name="have_same_name">该用户名已使用</string>
    <string name="have_same_num">该北斗卡号已使用</string>
    <string name="have_same_phone">该手机号已使用</string>
    <string name="edit_new_contact">编辑联系人资料</string>

    <!--群组相关-->
    <string name="add_new_group">创建群组</string>
    <string name="my_group">我的群组</string>

    <!--设置页面相关-->
    <string name="login_or_register">登录/注册</string>
    <string name="bt_set">设备连接</string>
    <string name="pos_set">定位设置</string>
    <string name="notice_set">通知设置</string>
    <string name="msg_set">提醒设置</string>
    <string name="msg_saved_set">预制消息设置</string>
    <string name="location_set">定位设置</string>
    <string name="map_set">地图设置</string>
    <string name="datas_set">本地数据管理</string>
    <string name="notice_bar_set">通知栏提醒开关</string>
    <string name="notice_home_msg_set">首页新消息通知开关</string>
    <string name="notice_home_device_set">首页设备信息通知开关</string>
    <string name="ring_set">铃声开关</string>
    <string name="vibration_set">振动开关</string>
    <string name="saved_msg_list">预制消息列表</string>

    <!--按钮相关-->
    <string name="edit">编辑</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>

    <!--地图定位相关-->
    <string name="device_location_type">北斗设备定位</string>
    <string name="phone_location_type">手机自身定位</string>

    <!--权限相关-->
    <string name="permission_denied">有权限被禁止，可能影响使用</string>

    <!--错误提示相关-->
    <string name="msg_miss">消息丢失，无法查看</string>

    <!--通知栏相关-->
    <string name="new_msg_title">消息提醒</string>
    <string name="new_msg_notice">有新的消息</string>

    <!--首页快捷按钮相关-->
    <string name="btn_home_set_title">快捷按钮设置</string>

    <!--SOS相关-->
    <string name="sos_confirm">确定启动SOS功能?</string>

    <!--联系人布局相关-->
    <array name="waveSideBarLetters">
        <item>\u0023</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </array>
</resources>
