<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xyxl.tianyingn3.ui.activities.MainActivity">


    <RelativeLayout
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/fragment_home_back">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="11dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            app:srcCompat="@drawable/div_mine_back" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageHeadLogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"

        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/editBdNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageHeadLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/enter_bd_num"
        android:inputType="number" />



    <EditText
        android:id="@+id/editPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editBdNum"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@+id/editPin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/dialog_btn_back_ok"
        android:text="@string/title_login"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/register_free"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/info_text">

        </RelativeLayout>

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/get_password"
            android:textSize="15sp" />

    </LinearLayout>
</RelativeLayout>