<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xyxl.tianyingn3.ui.activities.LocSetActivity">

    <RelativeLayout
        android:id="@+id/locTitleBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/fragment_home_back">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/location_set"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="11dp"
            android:layout_height="19dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="13dp"
            app:srcCompat="@drawable/div_mine_back" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locTitleBox"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/msgHomeMsgBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white">

            <RadioButton
                android:id="@+id/switchmsgMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp" />

            <TextView
                android:id="@+id/textmsgMsgOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"

                android:text="@string/device_location_type"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/item_line">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/msgHomeDevBox"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white">

            <RadioButton
                android:id="@+id/switchmsgDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp" />

            <TextView
                android:id="@+id/textmsgDevOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"

                android:text="@string/phone_location_type"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/item_line">

        </RelativeLayout>


    </LinearLayout>


</RelativeLayout>
