<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xyxl.tianyingn3.ui.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/buttomNaviBox"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/homeBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/homeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/homeImg"
                    android:layout_centerHorizontal="true"
                    android:text="@string/home" />

                <ImageView
                    android:id="@+id/homeImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@mipmap/ic_launcher" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/msgBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/msgText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/msgImg"
                    android:layout_centerHorizontal="true"
                    android:text="@string/msg" />

                <ImageView
                    android:id="@+id/msgImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@mipmap/ic_launcher" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sosBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mapBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/mapText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mapImg"
                    android:layout_centerHorizontal="true"
                    android:text="@string/map" />

                <ImageView
                    android:id="@+id/mapImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@mipmap/ic_launcher" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/setText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/setImg"
                    android:layout_centerHorizontal="true"
                    android:text="@string/me" />

                <ImageView
                    android:id="@+id/setImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@mipmap/ic_launcher" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragmentsBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/buttomNaviBox">

    </FrameLayout>


    <ImageView
        android:id="@+id/sosImgBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_launcher_round" />

</RelativeLayout>
